--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,8 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.2"
+
+    useLibrary 'org.apache.http.legacy'
     defaultConfig {
         applicationId "com.glacierwebcreative.firstbaptistchurchbigfork"
         minSdkVersion 15
